--- a/account-details/public/index.html
+++ b/account-details/public/index.html
@@ -6,6 +6,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Платежи</title>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="src/shared/styles/main.scss" />
   </head>
   <body>
